Bug 143673 - LibreOffice logo / banner bad display in Start Center in GNOME dark mode (steps in Comment 8)
Summary: LibreOffice logo / banner bad display in Start Center in GNOME dark mode (ste...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords:
Depends on:
Blocks: Start-Center GTK3 Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2021-08-01 13:01 UTC by Stéphane Guillou (stragu)
Modified: 2022-11-11 07:25 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screenshot of issue in LO 7.3 alpha0+ start center, comparison to About dialogue (227.61 KB, image/png)
2021-08-01 13:19 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2021-08-01 13:01:16 UTC
Description:
When using the desktop environment's dark mode in GNOME, the LibreOffice start center's banner / logo in the bottom left does not display properly: only the word "Libre" from "LibreOffice Community" is visible.

Steps to Reproduce:
1. Turn Dark Mode on in GNOME's settings (in Appearance section)
2. Open LibreOffice to see the start center

Actual Results:
Logo is displayed wrong.

Expected Results:
Logo is still readable, similar to what happens in the About dialogue.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 1dd4a80fa076bedb3a82821517036bad8dd79857
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-07-26_22:41:19
Calc: threaded
Comment 1 Stéphane Guillou (stragu) 2021-08-01 13:19:22 UTC
Created attachment 174014 [details]
screenshot of issue in LO 7.3 alpha0+ start center, comparison to About dialogue

Compare the Start Center banner to the one in the About dialogue.
Comment 2 Stéphane Guillou (stragu) 2021-08-01 13:31:37 UTC
Note that the logo displays fine if the GNOME appearance is switched to dark mode while the start center is already open. But once the dark mode is set, if LibreOffice is closed and start center reopened, the logo is not displayed properly.
Comment 3 Buovjaga 2021-08-02 15:24:43 UTC
Repro with Breeze dark colours in KDE + gtk3 vcl plugin. Will bibisect with 7.3 soon.

Arch Linux 64-bit
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 7b5922eb666e5f153060468b271d99510adb422e
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 30 July 2021
Comment 4 Buovjaga 2021-08-02 15:43:04 UTC
Oops, can't bisect yet as it is not seen in the latest of 7.3 repo:

commit d1abf4acc1ed26e35ff1347dd5bf0b4ac4f0c70a (HEAD -> master, origin/master, origin/HEAD)
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Jul 23 17:33:54 2021 +0200

    source 612d5b1a04fe022a34018d901bb9b052791d54e5
    
    source 612d5b1a04fe022a34018d901bb9b052791d54e5

But good to know it is between that and source hash 1dd4a80fa076bedb3a82821517036bad8dd79857
Comment 5 Buovjaga 2021-08-06 15:29:01 UTC
Weird: now the 7.3 repo was updated, but I still don't see the issue!
Comment 6 Stéphane Guillou (stragu) 2021-08-08 02:40:04 UTC
Interesting, I can't reproduce anymore with the latest build:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 0ec10cff008eb2d8b2c4f5b5fa35b25162081e9e
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-08-06_15:09:45
Calc: threaded
Comment 7 Buovjaga 2021-08-10 13:38:04 UTC
Ah, in safe mode with my own build I don't reproduce, let's close
Comment 8 Stéphane Guillou (stragu) 2021-08-10 13:58:22 UTC
Ah, I'm reopening as I could reproduce on another computer: with the latest daily build (9th of August 2021, using Ubuntu Budgie 18.04 with Arc-Dark widgets and dark mode on.

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: b2130ad3fda841c68a0436fbddf29bcedede0af5
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-08-09_13:03:07
Calc: threaded

I think I found the precise steps to reproduce:

Instead of opening the Start Center directly (which would display the logo properly):

1. (restart in safe mode and reset to factory settings if needed)
2. open a module, e.g. Writer
3. close the document (with the "Close document" top right cross), not the LibreOffice window
4. See the Start Center as a result

Actual results: LibreOffice logo display is wrong, like in Attachment 174014 [details]
Comment 9 Buovjaga 2021-08-10 14:02:36 UTC
(In reply to stragu from comment #8)
> Instead of opening the Start Center directly (which would display the logo
> properly):
> 
> 1. (restart in safe mode and reset to factory settings if needed)
> 2. open a module, e.g. Writer
> 3. close the document (with the "Close document" top right cross), not the
> LibreOffice window
> 4. See the Start Center as a result
> 
> Actual results: LibreOffice logo display is wrong, like in Attachment 174014 [details]
> [details]

Ah, that is still true for gtk3, I repro.
Comment 10 Buovjaga 2021-08-10 14:07:09 UTC
I see this already in 7.2 repo (jumping back 2000 commits from latest), so I think it has always been like this.
Comment 11 Stéphane Guillou (stragu) 2022-08-11 19:57:29 UTC
still reproducible with:

Version: 7.4.0.2 / LibreOffice Community
Build ID: 1512ce97d7ed39dce3121f7e15651fd8895f950e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 12 Rafael Lima 2022-09-29 15:11:49 UTC
Still repro with

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: e4d377d117874d2dc9039751dc029cb7249bd86c
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded

Issue only happens in gtk3... in kf5 all is ok.
Comment 13 Commit Notification 2022-09-30 10:25:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a091ae213eb8d64c21361969775b76e7911cc1af

tdf#143673 set an explicit drawing area bg

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Caolán McNamara 2022-09-30 10:30:15 UTC
seems to work for me now in trunk with that, backport to 7-4 in gerrit
Comment 15 Commit Notification 2022-10-03 10:29:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/18630ff2f994629d1e409b34e8486f2b59a4f109

tdf#143673 set an explicit drawing area bg

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Stéphane Guillou (stragu) 2022-10-03 17:51:09 UTC
Verified as fixed in:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 2a7fcaf582df3ada57ca519b50e29011973a1b6f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you very much Caolán ! :)