tdf#143673 set an explicit drawing area bg

noticed in gtk darkmode on switching from initial application
to start center

Change-Id: I1cffab97ecd69ca6043531a6b2b5fc34b1ca84f1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140789
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit a091ae213eb8d64c21361969775b76e7911cc1af)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140755
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>